syntax = "proto3";

package wpp.v1;

option go_package = "github.com/matheus3301/wpp/gen/wpp/v1;wppv1";

// SessionStatus represents the runtime state of a daemon session.
enum SessionStatus {
  SESSION_STATUS_UNSPECIFIED = 0;
  SESSION_STATUS_BOOTING = 1;
  SESSION_STATUS_AUTH_REQUIRED = 2;
  SESSION_STATUS_CONNECTING = 3;
  SESSION_STATUS_SYNCING = 4;
  SESSION_STATUS_READY = 5;
  SESSION_STATUS_RECONNECTING = 6;
  SESSION_STATUS_DEGRADED = 7;
  SESSION_STATUS_ERROR = 8;
}

// Pagination for list requests using keyset pagination.
message Pagination {
  int32 limit = 1;
  string cursor = 2;
}

// PageInfo returned with list responses.
message PageInfo {
  string next_cursor = 1;
  bool has_more = 2;
}

// EventEnvelope wraps all streamed events.
message EventEnvelope {
  string event_id = 1;
  string session = 2;
  int64 occurred_at_unix_ms = 3;
  string kind = 4;
  int32 payload_version = 5;
  string correlation_id = 6;
  bytes payload = 7;
}
